<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<ListView
		android:layout_height="0dp"
		android:layout_width="match_parent"
		android:layout_weight="1.0"
		android:id="@+id/mpoliciesLv"/>

	<Button
		style="?android:attr/buttonBarButtonStyle"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:text="@string/settings_global_add"
		android:onClick="addPolicy"/>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">

		<Button
			style="?android:attr/buttonBarButtonStyle"
			android:layout_height="wrap_content"
			android:layout_width="0dp"
			android:text="@string/settings_global_cancel"
			android:layout_weight="0.5"
			android:onClick="cancel"/>

		<View
			android:background="?android:attr/dividerHorizontal"
			android:layout_height="match_parent"
			android:layout_width="1dp"/>

		<Button
			style="?android:attr/buttonBarButtonStyle"
			android:layout_height="wrap_content"
			android:layout_width="0dp"
			android:text="@string/settings_global_confirm"
			android:layout_weight="0.5"
			android:onClick="confirm"/>

	</LinearLayout>

</LinearLayout>

